# nixpkgs-graph-explorer

./: .dockerignore  .gitignore  Dockerfile.etl  README.md  docker-compose.dev.yaml  docker-compose.yaml  flake.nix  sqlg.Dockerfile
.github/workflows/: build-backend.yml  build-web.yml  ci.yml  nightly.yml
api/: .env.prod  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
api/explorer/: __init__.py  graph.py
api/explorer/api/: __init__.py  graph.py  gremlin.py  ingest.py
api/explorer/api/queries/: cytoscape.py  derivations.py  packages.py  pagination.py  query.py
api/explorer/api/queries/test/: test_query.py
api/explorer/api/test/: test_graph.py  test_ingest.py  test_packages.py
api/explorer/queries/: cytoscape.py  packages.py  pagination.py  query.py
api/explorer/queries/test/: test_query.py
api/explorer/test/: test_graph.py  test_packages.py
api/tests/: conftest.py  constants.py  test_derivations.py  test_graph.py  test_gremlin.py  test_ingest.py  test_packages.py  test_query.py
client/: .dockerignore  .env.dev  .env.prod  Dockerfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  wsgi.py
client/explorer/: __init__.py  graph.py  routes.py
client/explorer/queries/: packages.py  pagination.py  query.py
client/explorer/query_bp/: __init__.py
client/explorer/query_bp/templates/: base.html  query.html  query_form.html
client/explorer/query_bp/templates/query_bp/: base.html  query.html  query_form.html  query_results.html
client/explorer/static/css/lib/: tabulator.min.css
client/explorer/static/css/src/: cy.css
client/explorer/static/js/lib/: tabulator.min.js
client/explorer/static/js/src/: graph.js
client/explorer/templates/: base.html  query.html  query_result.html
client/explorer/test/: test_graph.py  test_packages.py
client/explorer/utils/: utils.py
client_haskell/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  nixpkgs-graph-explorer.cabal
client_haskell/app/: Main.hs
client_haskell/src/: Args.hs  Env.hs  Graph.hs  Gremlin.hs  Html.hs  Router.hs
client_haskell/src/Adapters/: Simple.hs
client_haskell/src/Types/: Cytoscape.hs  Path.hs
client_haskell/static/css/src/: cy.css
client_haskell/static/js/src/: graph.js
client_haskell/test/: MyLibTest.hs
config/: gremlin-server-sqlg-postgres.groovy  sqlg.properties
core/: README.md  derivation.schema.json  nixpkgs-graph.schema.json  pyproject.toml
core/cli/core/: __main__.py
core/explorer/core/: __main__.py  model.py
core/explorer/extract/: __main__.py  cli.py  describe-derivation.nix  lib.nix  nixpkgs-graph.nix
core/extract_data/cli/: __main__.py  nixpkgs-graph.nix
core/extract_data/core/: __main__.py  create_nix_graph.py  nixpkgs-graph.nix
core/tests/extract/: test_cli.py
docker/etl/: Dockerfile
docker/sqlg/: README.md  check-status.sh  docker-entrypoint.sh  gremlin-server-sqlg-postgres.groovy  gremlin-server.yaml  sqlg.Dockerfile
etl/: Dockerfile  README.md  etl.py  example_cypher_query.py  example_query.py  nixpkgs-graph.nix  readonly_query.py  requirements.txt  test-requirements.txt  test_spec.py
experimental-client/: README.md  package-lock.json  package.json
experimental-client/src/: App.css  App.tsx  Graph.tsx  index.css
experimental-client/src/api/: Queries.ts
experimental-client/src/components/: Graph.tsx  QueryTool.css  QueryTool.tsx  ResultsTool.css  ResultsTool.tsx
js-client/: Caddyfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js-client/src/: app-main.ts  index.css  nix-search.ts  packages.ts  vite-env.d.ts
scripts/: README.md  check-status.sh  populate-test-data.py  readonly_query.py
terraform/: backend.tf  install.docker.sh  lb.tf  main.tf  tls.tf
web/: Caddyfile  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: assets
web/src/: api.ts  app-main.ts  code-editor.ts  graph-viewer.ts  nix-search.ts
