[tool.poetry]
name = "nixpkgs-graph-api"
version = "1.0.0"
description = "API server for nixpkgs-graph-explorer"
authors = [
    "Johann Eicher <johann.eicher@tweag.io>",
    "Dorran Howell <dorran.howell@tweag.io>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "explorer"}]

[tool.poetry.scripts]
explorer-ingest-graph = 'explorer.api.ingest:main'

[tool.poetry.dependencies]
python = "^3.10"

click = "^8.1.3"
gremlinpython = "^3.6" 
gunicorn = "^20.1.0"
networkx = "^2.8.7"
python_dotenv = "^0.21.0"
requests = "^2.28.1"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

nixpkgs-graph-core = { version = "^0.1.0" }
websockets = "^11.0.1"
backoff = "^2.2.1"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
pyright = "^1.1.298"
isort = "^5.12.0"

nixpkgs-graph-core = { path="../core", develop=true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
