[tool.poetry]
name = "nixpkgs-graph-api"
version = "0.1.0"
description = "API server for nixpkgs-graph-explorer"
authors = [
    "Johann Eicher <johann.eicher@tweag.io>",
    "Dorran Howell <dorran.howell@tweag.io>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "explorer"}]

[tool.poetry.dependencies]
python = "^3.10"

Flask = "^2.2.2"
gremlinpython = "3.6.2" 
gunicorn = "^20.1.0"
networkx = "^2.8.7"
python_dotenv = "^0.21.0"
requests = "^2.28.1"
marshmallow-dataclass = "^8.5.11"
marshmallow = "^3.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
pyright = "^1.1.298"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
