cabal-version:      3.0
name:               nixpkgs-graph-explorer
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             jeicher
maintainer:         johanneicher@gmail.com

-- A copyright notice.
-- copyright:
-- category:

-- NB! For installing with cabal, all files/directories embedded with
-- Data.FileEmbed must be included here
extra-source-files:
    CHANGELOG.md
  , static/favicon.ico
  , static/css/src/cy.css
  , static/img/line-chart.svg
  , static/js/src/graph.js

library
    exposed-modules:
        Adapters.Simple
      , Args
      , Env
      , Graph
      , Gremlin
      , Html
      , Router
      , Types.Cytoscape
      , Types.Path

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.14.3 && < 4.15
      , aeson                          >= 2.0.3 && < 2.1
      , containers                     >= 0.6.5 && < 0.7
      , text                           >= 1.2.4 && < 1.3
      , stm                            >= 2.5.0 && < 2.6
      , blaze-html                     >= 0.9.1 && < 0.10
      , file-embed                     >= 0.0.15 && < 0.1
      , greskell-core                  >= 1.0.0 && < 1.1
      , greskell-websocket             >= 1.0.0 && < 1.1
      , lens                           >= 5.2 && < 5.3
      , optparse-applicative           >= 0.17.0 && < 0.18
      , pretty-simple                  >= 4.1.2 && < 4.2
      , protolude                      >= 0.3.2 && < 0.4
      , scotty                         >= 0.12 && < 0.13
      , unliftio-core                  >= 0.2.0 && < 0.3
      , wai-middleware-static-embedded >= 0.1.0 && < 0.2

    hs-source-dirs:   src
    default-language: Haskell2010

executable nixpkgs-graph-explorer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.14.3 && < 4.15
      , protolude
      , nixpkgs-graph-explorer
      , stm

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nixpkgs-graph-explorer-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.3.0
