[tool.poetry]
name = "nixpkgs-graph-core"
version = "0.1.0"
description = "Core data model and related utilities for nixpkgs-graph-explorer"
authors = [
    "Dorran Howell <dorran.howell@tweag.io>"
]
license = "MIT"
readme = "README.md"
packages = [
	 {include = "explorer"},
	 {include = "cli"}
	 ]

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.10.7"
click = "^8.1.3"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
pyright = "^1.1.298"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
